# bit-fitting

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bench.cpp  plot_bench.py  test.cpp
include/: bit_field.hpp  bit_fit.hpp  calc.hpp  convolution.hpp  empty_link.hpp  fft.hpp  modint.hpp  ntt.hpp
